feat: add workflow to publish packages on GitHub Packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mina-scheduler",
-  "version": "0.1.0",
+  "name": "@rafaelvieiras/mina-scheduler",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
